@@ -15,6 +15,8 @@ cupt (0.3.2) UNRELEASED; urgency=low
       - Verify hash sums for .dsc files too.
   * Cupt:
     - Cache:
+      - BinaryVersion:
+        - Require only one hash sum to be specified.
       - 'get_original_apt_pin': don't attempt to pin source versions by source
          package names, they are applicable only to binary versions.
       - Parsing release info: don't require codename to be specified.
